--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -11,8 +11,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  min-height: var(--vh);
+  // height: 100%;
+  // min-height: var(--vh);
 }
 .footer-container {
   padding-top: vw(90);
